--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyChat" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/my_light_primary</item>
     </style>
 
     <style name="Theme.MyChat" parent="Base.Theme.MyChat" />
+
+
 </resources>
