--- a/app/src/main/res/drawable/shape_imageview.xml
+++ b/app/src/main/res/drawable/shape_imageview.xml
@@ -1,12 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <corners
-        android:bottomLeftRadius="@dimen/dialog_bubble_corners_radius"
-        android:bottomRightRadius="@dimen/dialog_bubble_corners_radius"
-        android:topLeftRadius="@dimen/dialog_bubble_corners_radius"
-        android:topRightRadius="@dimen/dialog_bubble_corners_radius" />
+    android:shape="oval">  <!-- Используем овальную форму для круга -->
 
     <solid android:color="@color/transparent" />
-
 </shape>
