--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="10"
-            android:hint="@string/message"
+            android:hint="@string/activity_chat_send_message"
             android:inputType="text"
             android:ems="10" />
 
