--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             app:layout_scrollFlags="enterAlways">
 
             <TextView
+                android:id="@+id/titleTv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
