--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -7,6 +7,11 @@
         android:title="@string/nav_bottom_chats"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/nav_contacts"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="@string/nav_bottom_contacts"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/nav_settings"
         android:icon="@android:drawable/ic_menu_manage"
         android:title="@string/nav_bottom_settings"
