--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="other_message_background_color">#F0F0F0</color> <!-- светлый серый -->
     <color name="user_message_text_color">#000000</color> <!-- черный -->
     <color name="other_message_text_color">#333333</color> <!-- темно-серый -->
+    <color name="toolbarBackground">#03A9F4</color>
 </resources>
