Перешел на Picasso

--- a/app/src/main/res/layout/activity_chat_edit.xml
+++ b/app/src/main/res/layout/activity_chat_edit.xml
@@ -50,6 +50,7 @@
             android:textColor="#2196F3" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/usersRv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -63,6 +64,19 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/addImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/plus"
+        android:textColor="#03A9F4"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageChat"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.72" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
