--- a/app/src/main/res/layout/item_other_message.xml
+++ b/app/src/main/res/layout/item_other_message.xml
@@ -1,13 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="start"
     android:orientation="vertical"
     android:padding="8dp">
 
+    <!-- Заголовок с изображением профиля и именем пользователя -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -20,11 +22,13 @@
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:layout_marginStart="8dp"
+            android:text="@string/user_name"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
     </LinearLayout>
 
+    <!-- Сообщение -->
     <TextView
         android:id="@+id/messageTv"
         android:layout_width="wrap_content"
@@ -32,6 +36,29 @@
         android:layout_marginStart="30dp"
         android:background="@drawable/other_message_background"
         android:padding="8dp"
-        android:text="Message content"
+        android:text="@string/message_content"
         android:textColor="@android:color/black" />
+
+    <!-- Изображение -->
+    <ImageView
+        android:id="@+id/imageMessage"
+        android:layout_width="209dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="30dp"
+        android:padding="3dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/other_message_background"
+        tools:srcCompat="@tools:sample/avatars"
+        android:visibility="gone"/>
+
+    <!-- Видео -->
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="209dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="30dp"
+        android:padding="3dp"
+        android:background="@drawable/other_message_background"
+        android:visibility="gone"/> <!-- Изначально скрыто -->
+
 </LinearLayout>
