--- a/app/src/main/res/layout/item_user_message.xml
+++ b/app/src/main/res/layout/item_user_message.xml
@@ -11,6 +11,26 @@
         android:layout_height="wrap_content"
         android:background="@drawable/user_message_background"
         android:padding="8dp"
-        android:text="Message content"
+        android:text="@string/message_content"
         android:textColor="@android:color/black" />
+    <!-- Изображение -->
+    <ImageView
+        android:id="@+id/imageMessage"
+        android:layout_width="209dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="30dp"
+        android:padding="3dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/other_message_background"
+        android:visibility="gone"/>
+
+    <!-- Видео -->
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="209dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="30dp"
+        android:padding="3dp"
+        android:background="@drawable/other_message_background"
+        android:visibility="gone"/> <!-- Изначально скрыто -->
 </LinearLayout>
